objects/Member_Rates__c.object
<CustomObject>
    <fields>
        <fullName>Project_Rate_Card__c</fullName>
        <label>Project Rate Card</label>
        <referenceTo>Project_Rate_Card__c</referenceTo>
        <relationshipLabel>Member Rates</relationshipLabel>
        <relationshipName>Member_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>Project_Rate_Card__r.Taskray_Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Member Rates</relationshipLabel>
        <relationshipName>Member_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Member Rate</label>
    <nameField>
        <displayFormat>RATE-{0}</displayFormat>
        <label>Team Rates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>